<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_blur">
    <TextView
        android:id="@+id/settings_title"
        style="@style/ScreenTitle"
        android:text="@string/settings_title"/>

    <LinearLayout
        android:layout_below="@+id/settings_title"
        android:id="@+id/settings_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            style="@style/SettingsWrapper">
            <TextView
                style="@style/SettingsDescription"
                android:text="@string/settings_option_voice"/>
            <ToggleButton
                android:id="@+id/settings_toggle_voice"
                style="@style/SettingsToggle"/>
        </LinearLayout>

        <LinearLayout
            style="@style/SettingsWrapper">
            <TextView
                style="@style/SettingsDescription"
                android:text="@string/settings_option_shake"/>
            <ToggleButton
                android:id="@+id/settings_toggle_shake"
                style="@style/SettingsToggle"/>
        </LinearLayout>

        <LinearLayout
            style="@style/SettingsWrapper">
            <TextView
                style="@style/SettingsDescription"
                android:text="@string/settings_option_pressed"/>
            <ToggleButton
                android:id="@+id/settings_toggle_pressed"
                style="@style/SettingsToggle"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:gravity="center">
        <Button
            android:id="@+id/button_about"
            style="@style/SimpleButtonWhite"
            android:text="@string/settings_button_about" />
        <Button
            android:id="@+id/button_back"
            style="@style/SimpleButtonBlue"
            android:text="@string/settings_button_back" />
    </LinearLayout>
</RelativeLayout>